# fastshap_plusplus

./: .gitignore  README.md  bb_architecture.py  census explainer.pt  census surrogate.pt  compute_kernel.py  eval_surrogate.py  explainer.py  explainer_architecture.py  ff_explainer.py  plots.ipynb  plots_adult.ipynb  plots_dutch.ipynb  pyproject.toml  shap.ipynb  surrogate.py  surrogate_architecture.py  train_bb.py  train_explainer.py  train_model.py  train_surrogate.py  unet.py  utils.py
centralised/: bb_architecture.py  surrogate_architecture.py  train_explainer.py  train_explainer_comparison.py  train_surrogate.py  utils.py
dataset_preparation/: employment.ipynb  income.ipynb
fastshap/: fastshap.py  fastshap_dp.py  image_surrogate_DP.py  surrogate.py  surrogate_dp.py  utils.py
ff_explainer/: dutch_NO_DP.yaml  run_sweep_2.sh  temp_output.txt
fffastshap/: ff_shap_training.py
old_files/: census(2).ipynb  census.ipynb  plots.ipynb
original/: census explainer.pt  census explainer_surrogato_tuned.pt  census surrogate.pt  census(2).ipynb  explainer.yaml  run.sh  run_sweep.sh  shap_generation.py  surrogate.pt  surrogate.yaml  surrogate_a_muzzo.pt  surrogato_con_hyp_search.pt  surrogato_nuovo.pt  train_explainer.py  train_model.py  train_surrogate.py
plots/: plots_dutch.ipynb  plots_mnist.ipynb
train_dutch/: dutch_DP_05.yaml  dutch_DP_1.yaml  dutch_DP_5.yaml  dutch_NO_DP.yaml  model_agosto_DP.pth  model_agosto_DP_05.pth  model_dutch_NO_DP.pth  model_dutch_epsilon_1.pth  run_sweep.sh
train_explainer/: dutch_DP_05.yaml  dutch_DP_1.yaml  dutch_DP_2.yaml  run.sh  (+37 more)
(+807 files in other folders)
