[tool.poetry]
name = "private-fast-shap"
version = "0.1.0"
description = ""
authors = ["lucacorbucci <corbuccilu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shap = "^0.45.1"
lightgbm = "^4.3.0"
torch = "^2.3.0"
opacus = "^1.4.1"
wandb = "^0.17.0"
ruff = "^0.4.8"
dill = "^0.3.8"
shapley-regression = "^0.0.1"
torchvision = "^0.19.1"
flwr = "1.8.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
ray = "^2.12.0"
matplotlib = "^3.9.2"
nvitop = "^1.3.2"
tqdm = "^4.67.1"
aix360 = "^0.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
